# NewsPaper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  manage.py  poetry.toml  postgres.Dockerfile  prod_manage.py  pyproject.toml  requirements.txt
.github/workflows/: rebuild-and-rerun.yml
NewsPaper/: asgi.py  base_conf.py  choices.py  settings.py  urls.py  venv.py  wsgi.py
NewsPaper/configuration/: api.py  business.py  debug.py  django.py  frontend.py  locale.py  secrets.py  storage.py
NewsPaper/settings/: development.py  production.py
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_publisher.py
blog/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_articlecontent_unique_together_and_more.py  0002_article_created_at_article_published_and_more.py  0003_alter_article_author_alter_articlecontent_language_and_more.py  0004_alter_articlecontent_content.py  0005_alter_article_author_alter_article_slug.py
blog/services/: generators.py  page_context.py  structures.py
blog/templates/blog/: ArticleList.html  AuthorArticleList.html  home.html
fixtures/: blog.json
static/css/: blog.css
static/css/ckeditor5/: admin_dark_mode_fix.css
templates/blog/: ArticleDetail.html  ArticleList.html  home.html
templates/layouts/: base.html
